Add company ID hidden global
